set minimum stability versioin

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
             "MRI\\QuranQuote\\": "src/"
         }
     },
+    minimum-stability: dev,
+    prefer-stable: true,
     "authors": [
         {
             "name": "Mohammad Rakibul Islam",
