--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
             "MRI\\QuranQuote\\": "src/"
         }
     },
-    minimum-stability: dev,
-    prefer-stable: true,
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Mohammad Rakibul Islam",
