--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         }
     ],
     "require": {
-        "../../../vendor/guzzlehttp/guzzle": "^7.0.1"
+        "guzzlehttp/guzzle": "^7.2"
     }
 }
